@@ -12,16 +12,18 @@ application {
 
 javafx {
     version = "15.0.1"
-    modules = [ 'javafx.controls', 'javafx.fxml' ]
+    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.swing' ]
 }
 
 run {
    jvmArgs = [
-        "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
-        "--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
-        "--add-exports=javafx.base/com.sun.javafx.binding=ALL-UNNAMED",
-                "--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
-                "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED"
+           "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
+           "--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
+           "--add-exports=javafx.base/com.sun.javafx.binding=ALL-UNNAMED",
+           "--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
+           "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
+           "--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
+           "--add-modules=javafx.controls,javafx.swing"
     ]
 }
 
@@ -33,8 +35,6 @@ sourceCompatibility = 12
 repositories {
     mavenCentral()
 }
-
-
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
